--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Space</title>
+    <script
+      src="https://kit.fontawesome.com/bc89857f35.js"
+      crossorigin="anonymous"
+    ></script>
+
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./normalize.css" type="text/css" />
@@ -22,7 +27,7 @@
         <a href="#">upgrade your browser</a> to improve your experience.
       </p>
     <![endif]-->
-    <header>
+    <!-- <header>
       <nav>
         <div class="row">
           <img src="./img/logo-white.png" class="logo" alt="" />
@@ -39,7 +44,40 @@
         <a class="btn btn-full" href="#">Lorem</a>
         <a class="btn btn-ghost" href="#">Ipsum</a>
       </div>
-    </header>
+    </header> -->
+
+    <section class="intro">
+      <div class="row">
+        <div class="col span-1-of-3">
+          <img src="./img/me.jpg" alt="" />
+        </div>
+
+        <div class="col span-2-of-3">
+          <div class="content">
+            <p class="name">Nick Llerandi_</p>
+            <p class="work">JavaScript | React | Redux | Node | GraphQL</p>
+            <div class="contacts">
+              <dl>
+                <dt>Experience:</dt>
+                <dd>10+ years</dd>
+                <dt>Email</dt>
+                <dd>nick@nllerandi.com</dd>
+                <dt>Location:</dt>
+                <dd>New York Metropolitan Area</dd>
+              </dl>
+            </div>
+            <div class="social">
+              <a href="https://github.com/nllerandi"
+                ><i class="fab fa-github"></i
+              ></a>
+              <a href="https://www.linkedin.com/in/nicholasllerandi/"
+                ><i class="fab fa-linkedin"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script src="" async defer></script>
   </body>
