--- a/public/index.html
+++ b/public/index.html
@@ -27,24 +27,6 @@
         <a href="#">upgrade your browser</a> to improve your experience.
       </p>
     <![endif]-->
-    <!-- <header>
-      <nav>
-        <div class="row">
-          <img src="./img/logo-white.png" class="logo" alt="" />
-          <ul class="main-nav">
-            <li><a href="#">Oh</a></li>
-            <li><a href="#">Yea</a></li>
-            <li><a href="#">Baby</a></li>
-            <li><a href="#">Uh</a></li>
-          </ul>
-        </div>
-      </nav>
-      <div class="hero-text-box">
-        <h1>Nick Llerandi<br />Web | Software Engineer</h1>
-        <a class="btn btn-full" href="#">Lorem</a>
-        <a class="btn btn-ghost" href="#">Ipsum</a>
-      </div>
-    </header> -->
 
     <section class="intro">
       <div class="row">
@@ -75,6 +57,31 @@
               ></a>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="hello">
+      <div class="row">
+        <div class="col span-1-of-1">
+          <h2 class="header">Hi_</h2>
+          <p class="description">
+            I am a Web / Software Developer and Engineer able to build a Web
+            presence from the ground up - from concept, navigation, layout and
+            programming to UX. Skilled at writing well-designed, testable and
+            efficient code using current best practices in Web development. Fast
+            learner, hard worker and team player who is proficient in an array
+            of scripting languages and multimedia Web tools.
+          </p>
+          <a href="./Nicholas-Llerandi-Engineer.pdf" class="btn">Resume</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="footer">
+      <div class="row">
+        <div class="col span-1-of-1">
+          <p>Get in touch_</p>
         </div>
       </div>
     </section>
