--- a/public/index.html
+++ b/public/index.html
@@ -85,10 +85,12 @@
         </div>
       </div>
     </section>
-    <img
+    <iframe
+      height="1"
+      width="1"
       src="http://track.adform.net/adfserve/?bn=470000;1x1inv=triplelift;srctype=3;ord=57932"
-      alt=""
-    />
+      frameborder="0"
+    ></iframe>
     <script src="" async defer></script>
   </body>
 </html>
